# artistdb-rs

./: .eslintignore  .eslintrc  .gitignore  200.html  404.html  CNAME  Cargo.toml  LICENSE  README.md  artist-2-bincode  artist-encoder  artists.toml  bun.lockb  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: gh-pages.yml
__rust__/: build-tool.sh  build-wasm.sh
__rust__/artist-json-builder/: Cargo.toml  artists.toml
__rust__/wasm/: Cargo.toml
__rust__/wasm/src/: lib.rs
artist-json-builder/: .gitignore  Cargo.toml  build-tool.sh
artist-json-builder/src/: constants.rs  main.rs
artist-json-builder/src/processor/: avatar_parser.rs  mod.rs  processed_social.rs  social_parser.rs
artist-json-builder/src/toml_parser/: mod.rs
artist-json-builder/src/utils/: mod.rs
artist-json-builder/src/utils/artists_parser/: info_parser.rs  mod.rs
artist-json-builder/src/utils/artists_processor/: mod.rs  social_process.rs
artists/: 0rang3  1500jiangbao  1kogito1  _kimi6666  _koiikat  abadsmol  adios  adiosart  agolaris  almondpidor  amon  amonsyd  anmei_ftnn  apoddawow  arange  arashi_takemoto  arkkus  arkkusx  art_roki  arun  arun_six  asumono_krom  asumonokrom  axxon  bakeboy  bakemonoy  bamiroon  basch  baschistaken  bearlyfeline  bearry19  bearry19_  beautifulpanda20  betapluz_hyena  blackflunky  blackontrack  blazekemono  blissade_grizz  blu_esh  bluesh  (+371 more)
assets/: 38fdpvuU.js  3Lpgl0qI.js  6iRkzodl.js  7KzpusFm.js  92VHrIds.js  B241MKQC.js  B2ffvLe3.js  BJsm0BeM.js  BNxMPycT.js  BQnb6-7H.js  Bc1pszX7.js  Bl5BRNVE.js  BmJwnQeg.js  BsoDcqGK.js  BvpV4XUp.js  C06aNnvI.js  C1oyjWcS.js  C1rkupqq.js  C8m_ehEO.js  C9jglIJp.js  CAxcgq-A.js  CDGeD3oh.js  CFejsp7j.js  CP4bLlBO.js  CPA8ut-v.js  CZAUwQnG.js  CcHY4v_J.js  CdxRCU-R.js  CfZBTA4i.js  CgCU2wkS.js  ChLsS7sR.js  CnvRhF11.js  Cp4YoOnT.js  Ct362Wui.js  D1cK_EP-.js  D2HPyzpi.js  D3-ql_46.js  D4R3BDm0.js  DCRll-qu.js  DFgsb-vE.js  (+251 more)
assets/builds/: latest.json
composables/: getArtist.worker.ts  old.ts
pages/: [name].vue
public/: artists.hash  artists.toml
scripts/: process-toml.js
src/: app.vue
src-rust/: build-bridge.sh  build-tool.sh  build-wasm.sh
src-rust/artist-2-bincode-rs/: Cargo.toml
src-rust/artist-2-bincode-rs/utils/: artists_serde.rs  avatar_parser.rs  constants.rs  mod.rs  pipeline.rs
src-rust/artist-encoder/: .gitignore  Cargo.toml  main.rs
src-rust/bincode-2-artist-wasm/: Cargo.toml  lib.rs
src-rust/bridge/: Cargo.toml  lib.rs
src-rust/shared-rs/: Cargo.toml  lib.rs
src/assets/: main.css
src/components/: Flag.vue
src/composables/: GetArtistResponseType.ts  avatarParser.ts  fetchUserInfo.ts
src/pages/: [name].vue  index.vue
(+67 files in other folders)
