[package]
name = "artist-json-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
inotify = "0.10.2"
murmur3 = "0.5.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.1", features = ["json"] }
toml_edit = "0.22.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
