[package]
name = "artist-2-bincode-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "artist-2-bincode"
path = "main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
murmur3 = "0.5.2"
serde = { version = "1.0.196", features = ["derive"] }
term_size = "0.3.2"
toml_edit = { version = "0.22.6", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
inotify = "0.10.2"
shared = { path = "../shared-rs" }
