[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
wasm-bindgen = "0.2.91"
