[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
wasm-bindgen = "0.2.91"
